--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -11,23 +11,36 @@
                     <h1>{{data?.magneticFieldMeasurementUnit?.title}}</h1>
                     <p class="p1"> {{data?.magneticFieldMeasurementUnit?.text}} </p>
           </div>
+
           <div class="holder1_2">
               <img src="../../assets/pictures/magnet1.jpg" alt="Magnetic field" width="330" height="300"><br><br>
               <p><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Magnetic field</b></p>
           </div>
       </div>
+
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+
       
       <div class="holder2">
           <div class="holder2_1">
-          <h1>{{data?.theStrenghtOfEarthMangeticField?.title}}</h1>
-          <p class="p1">{{data?.theStrenghtOfEarthMangeticField?.text}}</p>
-          <h1>{{data?.theMagicCirclesOfNajdan?.title}}</h1>
-          <p class="p1">{{data?.theMagicCirclesOfNajdan?.text}}</p>
-  
-            
-  
-                  
-                    
+            <h1>{{data?.theStrenghtOfEarthMangeticField?.title}}</h1>
+            <p class="p1">{{data?.theStrenghtOfEarthMangeticField?.text}}</p>
+          </div>
+
+    </div>
+
+    <br />
+    <br />
+    
+    <div class="holder2">
+          <div class="holder2_1">
+            <h1>{{data?.theMagicCirclesOfNajdan?.title}}</h1>
+            <p class="p1">{{data?.theMagicCirclesOfNajdan?.text}}</p>    
           </div>
           <div class="holder2_2">
               <img src="../../assets/pictures/magnet2.jpg" alt="The Magic of Najdan" width="330" height="300"><br><br>
@@ -35,4 +48,9 @@
           </div>
           
       </div>
+
+      <br />
+      <br />
+      <br />
+
     </div>
