--- a/src/app/components/basket/basket.component.scss
+++ b/src/app/components/basket/basket.component.scss
@@ -1,19 +1,19 @@
 @import'../../styles/variables';
 @import'../../styles/mixins';
 
-:host {
-   background-color: red !important;
-}
 
 .button_whole{
           margin-bottom: $pixel-40;
           display: flex;
           flex-direction: column;
           .button_one{
-                    margin-bottom: $pixel-100;
+                    margin-top: 30px;
+                    margin-left: 50px;
           }
           .button_two{
-                    margin-left: $margin-left-400;
+            margin-top: 50px;
+            margin-left: 50px;
+                    
           }
 }
 table tr th{
@@ -23,7 +23,7 @@ table tr th{
 
 button{
           font-size: $font-size-m;
-          background-color: $color-rose;
+          background-color: $color-shadowtwo;
           text-transform: $text-transorm-uppercase;
           border: 0px;
 }
