--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -56,7 +56,7 @@
        font-size: $font-size-m;
        border: none;
         border-radius: $border-radius-s;
-        background-color: $color-rose;
+        background-color: $color-shadow;
         text-transform: uppercase;
     }
 
