changed some details

--- a/src/app/components/my-account/my-account.component.scss
+++ b/src/app/components/my-account/my-account.component.scss
@@ -11,7 +11,7 @@
       }
       .login {
           width: $width-s;
-          background-color: $color-rose ;
+          background-color: $color-shadow;
           color:$color-black;
           padding:$padding1420;
           border: none;
