changed componenet order

--- a/src/app/components/order/order.component.scss
+++ b/src/app/components/order/order.component.scss
@@ -13,7 +13,7 @@
           .text {
 
                     width: 25%;
-                    background-color: $color-rose2;
+                    background-color: $color-shadow;
                     color:$color-black;
                     padding: $padding1420;
                     border: none;
