--- a/src/app/components/order/order.component.scss
+++ b/src/app/components/order/order.component.scss
@@ -26,7 +26,7 @@
                     margin-left: $pixel-60;
                     margin-top: $margin-10;
                     width: 11%;
-                    background-color: $color-rose ;
+                    background-color: $color-shadow ;
                     color:$color-black;
                     padding: $padding1420;
                     border: none;
