changed my_account component

--- a/src/app/components/my-account/my-account.component.scss
+++ b/src/app/components/my-account/my-account.component.scss
@@ -8,6 +8,9 @@
       .main{
          
           margin: $margin-50;
+          p{
+            font-size: $font-size-xl;
+          }
       }
       .login {
           width: $width-s;
