change images in read.md

--- a/src/app/components/magnetic-therapy/magnetic-therapy.component.html
+++ b/src/app/components/magnetic-therapy/magnetic-therapy.component.html
@@ -3,7 +3,7 @@
           <div class="holder1_1">
           
                   <h1>{{data?.magneticTherapy?.title}}</h1><br>
-                <p class="p1">>{{data?.magneticTherapy?.text}}</p> 
+                <p class="p1">{{data?.magneticTherapy?.text}}</p> 
    
                   
           </div>
