--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -45,6 +45,7 @@ $border-1:1px solid #ccc;
 $border-2:1px solid #EBF0FF;
 
 
+$margin-left-10:10px;;
 $margin-left-20:20px;;
 $margin-left-35:35px;;
 $margin-left-40:40px;;
