--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -1,6 +1,6 @@
 <div class="whole">
           <div class="single-product"> 
-                       <img [src]="product?.image" [alt]="product?.title" />
+                       <img [src]="product?.image" class= "w-50"   [alt]="product?.title" />
 
           </div>
           <div class="single-product--info">
@@ -10,3 +10,4 @@
                      <button class="add_to_cart" (click)= "addToCart()" >Add to cart</button><br>
           </div>
 </div>
+
